Added link to sequence page

--- a/views/refseq.haml
+++ b/views/refseq.haml
@@ -6,3 +6,5 @@
       %td= value
 
 %a{:href => "/#{ refseq.primaryIdentifier }/features?start=#{ segment[:start] }&end=#{ segment[:end]}"} features
+
+%a{:href => "/#{ refseq.primaryIdentifier }/residues?start=#{ segment[:start] }&end=#{ segment[:end]}"} sequence
