Now working well, with a few bugs ironed out.

--- a/views/refseq.haml
+++ b/views/refseq.haml
@@ -7,4 +7,4 @@
 
 %a{:href => "/#{ refseq.primaryIdentifier }/features?start=#{ segment[:start] }&end=#{ segment[:end]}"} features
 
-%a{:href => "/#{ refseq.primaryIdentifier }/residues?start=#{ segment[:start] }&end=#{ segment[:end]}"} sequence
+%a{:href => "/#{ refseq.primaryIdentifier }/residues?start=#{ short_seg[:start] }&end=#{ short_seg[:end]}"} sequence
