--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,7 @@ ol.basepairs {
 
 .basepairs li.base {
     color: #f8f8f8;
+    background: #444;
     font-weight: bold;
 }
 .basepairs li.base.g {
