--- a/views/index.haml
+++ b/views/index.haml
@@ -1,12 +1,22 @@
-%h2 Global Stats
-%table
-  - global_stats.each do |name, value|
-    %tr
-      %td= name
-      %td= value
+%a.btn{:href => '/JBrowse-1.9.7/index.html'} View in JBrowse
 
+%h2 Global Stats
+%table.table.table-bordered.table-striped
+  %thead
+    %tr
+      %th Name
+      %th Value
+  %tbody
+    - global_stats.each do |name, value|
+      %tr
+        %td= name
+        %td= value
+
+- max_seq_len = ref_seqs.map(&:length).compact.max
+- chroms = ref_seqs.sort { |a, b| (b.length || 0) <=> (a.length || 0)}
 %h2 Reference Sequences
-%ul
-  - ref_seqs.each do |chrom|
-    %li
+%ul#ref-seqs
+  - chroms.each do |chrom|
+    - w = chrom.length ? (chrom.length.to_f / max_seq_len.to_f * 100) : 0.1
+    %li.ref-seq{:style => "width: #{ w }%"}
       %a{:href => "/#{chrom.primaryIdentifier}?start=1&end=#{ chrom.length }"}= chrom.primaryIdentifier
