--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,14 +46,22 @@ h3 {
 ol.basepairs {
     padding: 0;
     margin: 0;
-    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+}
+
+@media screen and (min-width: 1600px) {
+    ol.basepairs {
+        max-width: 1440px;
+    }
 }
 
 .basepairs li {
-    width: 18px;
-    height: 18px;
-    font-size: 12px;
-    border: 1px solid #ccc;
+    width: 16px;
+    height: 16px;
+    font-size: 10px;
+    border: 0.5px solid #ccc;
     padding: 2px;
     margin-top: 0;
     margin-bottom: 0;
