--- a/views/features.haml
+++ b/views/features.haml
@@ -1,18 +1,19 @@
-%h2
-  Features overlapping #{refseq.primaryIdentifier}:#{segment[:start]}..#{segment[:end]}
+- chrom = refseq.primaryIdentifier
+- s = params[:start].to_i
+- e = params[:end].to_i
+- len = e - s
+- base_url = "/services/#{ params[:name] }/#{ chrom }/features"
 
-- s = segment[:start].to_i
-- e = segment[:end].to_i
-- seg_length = e - s
-- name = refseq.primaryIdentifier
+%h2
+  Features overlapping #{chrom}:#{params[:start]}..#{params[:end]}
 
 %ul.pager
-  - if s - seg_length > 1
+  - if s - len > 1
     %li.previous
-      %a{:href => "/#{ name }/features?start=#{ s - seg_length }&end=#{ e - seg_length }"}
+      %a{:href => url("#{ base_url }/?start=#{ s - len }&end=#{ e - len }")}
         previous
   %li.next
-    %a{:href => "/#{ name }/features?start=#{ s + seg_length }&end=#{ e + seg_length }"}
+    %a{:href => url("#{ base_url }?start=#{ s + len }&end=#{ e + len }")}
       next
 
 %ul.features
@@ -22,7 +23,7 @@
       .name= feature.name
       .unique-id= feature.uniqueID
       .location
-        #{ refseq.primaryIdentifier }:#{ feature.end }..#{ feature.end }
+        #{ chrom }:#{ feature.end }..#{ feature.end }
         = feature.strand
 
       - if feature.subfeatures.size > 0
