We expect interbase co-ordinates only

--- a/views/index.haml
+++ b/views/index.haml
@@ -18,7 +18,7 @@
 %h2 Reference Sequences
 
 %ul#ref-seqs
-  - chrom_url = lambda {|chrom| url("/services/#{ params[:name] }/#{ chrom.primaryIdentifier }?start=1&end=#{ chrom.length }")}
+  - chrom_url = lambda {|chrom| url("/services/#{ params[:name] }/#{ chrom.primaryIdentifier }")}
   - chroms.each do |chrom|
     - w = chrom.length ? (chrom.length.to_f / max_seq_len.to_f * 100) : 0.1
     %li.ref-seq{:style => "width: #{ w }%"}
