--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-%a.btn{:href => '/JBrowse-1.9.7/index.html'} View in JBrowse
+%a.btn{:href => url("/#{params[:name]}/jbrowse/index.html")} View in JBrowse
 
 %h2 Global Stats
 %table.table.table-bordered.table-striped
